Fixed a bug where standalone grid was not being created correctly Also removed dark mode for now

--- a/style.css
+++ b/style.css
@@ -7,7 +7,7 @@ body {
   }
 
 :root {
-  --background-color: #4e2c45;
+  --background-color: #5e2e51;
   --title-background-color: #5384e7;
   --button-color: #5384e7;
   --photo-reciever-color: peachpuff;
